# a_maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  mazegen_pyproject.toml  pyproject.toml
scripts/: bundle_mazegen.py
scripts/mazegen_sources/: README.md  __init__.py  wrapper.py
src/a_maze_ing/: __init__.py  cell.py  flaw.py  gui.py  output.py  parsing.py  rendering.py
src/a_maze_ing/algorithms/: a_star.py  dfs.py  ft_pattern.py  grid_utils.py  kruskal.py  wilson.py
src/a_maze_ing/core/: __init__.py  cell.py  parsing.py  types.py
src/a_maze_ing/io/: __init__.py  output.py  rendering.py
src/a_maze_ing/maze/: __init__.py  flaw.py
src/a_maze_ing/ui/: __init__.py  gui.py
tests/: helpers.py  test_cli.py  test_generation_imperfect.py  test_generation_perfect.py  test_output_format.py  test_parsing.py  test_pathfinding.py  test_pattern.py
