[project]
name = "a-maze-ing"
version = "0.1.0"
description = ""
authors = [
    {name = "trgascoi", email = "trgascoi@student.42lyon.fr"},
    {name = "amantoux", email = "amantoux@student.42lyon.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "a_maze_ing", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
