[project]
name = "a-maze-ing"
version = "0.1.0"
description = ""
authors = [
    {name = "trgascoi", email = "trgascoi@student.42lyon.fr"},
    {name = "amantoux", email = "amantoux@student.42lyon.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "a_maze_ing", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
